<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/menu_history" />

        <item
            android:id="@+id/nav_addContact"
            android:icon="@drawable/ic_person_add_black_24dp"
            android:title="@string/menu_addContact" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/menu_profile" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_signOut"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/menu_signOut" />
        </menu>
    </item>

</menu>
